# sea_orm_casbin_adapter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: actions.rs  adapter.rs  models.rs
tests/: test.md  test.rs
