[package]
authors = ["lingdu <waong2005@126.com>"]
categories = ["database"]
description = "❤ casbin adapter for rust with sea_orm"
documentation = "https://docs.rs/sea_orm_casbin_adapter"
edition = "2021"
homepage = "https://github.com/lingdu1234/sea_orm_casbin_adapter.git"
keywords = ["casbin", "mysql", "postgres", "sqlite", "sea_orm"]
license = "MIT"
name = "sea_orm_casbin_adapter"
readme = "README.md"
repository = "https://github.com/lingdu1234/sea_orm_casbin_adapter.git"
version = "0.2.5"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
# casbin = {version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental"]}
casbin = {version = "2.0.9", default-features = false, features = ["incremental"]}
# option
actix-rt = {version = "2.6.0", default-features = false, optional = true}
async-std = {version = "1.10.0", optional = true}
slog = {version = "2.7.0", optional = true}
slog-async = {version = "2.7.0", optional = true}
slog-term = {version = "2.8.0", optional = true}
sqlx = {version = "^0.5", optional = true}
tokio = {version = "1.16.1", optional = true, default-features = false}
[dev-dependencies]
tokio = {version = "1.16.1", features = ["full"]}

[dependencies.sea-orm]
default-features = false
features = ["macros"]
version = "0.6.0"

[features]
default = []
# sea-orm
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# casbin
logging = ["slog", "slog-term", "slog-async"]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio/fs", "tokio/io-util"]
# async runtime
# async-std
runtime-async-std-native-tls = ["casbin/runtime-async-std", "sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["casbin/runtime-async-std", "sqlx/runtime-async-std-rustls"]
# tokio
runtime-tokio-native-tls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sqlx/runtime-tokio-rustls"]
# actix (actually based on tokio)
runtime-actix-native-tls = ["casbin/runtime-tokio", "sqlx/runtime-actix-native-tls"]
runtime-actix-rustls = ["casbin/runtime-tokio", "sqlx/runtime-actix-rustls"]

[profile.release]
codegen-units = 1 
debug = false 
lto = true 
opt-level = "z" # Optimize for size.
panic = 'abort'
